# IdleRPG

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.discord.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mypy  LICENSE  NEXT_CHANGELOG.md  README.md  commands.txt  config.example.py  config.py.example  config_example.toml  docker-compose.yml  idlerpg.py  idlerpg.service  items.txt  launcher.py  mypy.ini  pyproject.toml  requirements-custom.txt  requirements-dev.txt  requirements.txt  schema.sql  setup.cfg  setup.sh  start.sh  styleguide.md  test  test.sh  tournament.json  xgettext.sh
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: FUNDING.yml
assets/: optimize.sh
chess/: COPYING  README.md
classes/: badges.py  bot.py  bucket_cooldown.py  cache.py  classes.py  context.py  converters.py  enums.py  errors.py  exceptions.py  http.py  items.py  logger.py
cogs/: admin.py  adventure.py  bases.py  battles.py  chess.py  christmas.py  classes.py  crates.py  custom.py  easter.py  error_handler.py  gambling.py  global_events.py  gods.py  grogtopia.py  guild.py  halloween.py  help.py  hungergames.py  images.py  locale.py  marriage.py  miscellaneous.py  music.py  music2.py  owner.py  patreon.py  profile.py  races.py  raid.py  ranks.py  rpgtools.py  server.py  shard_communication.py  store.py  tournament.py  trading.py  transaction.py  ttt.py  vote.py
launcher/: __main__.py
locales/: 1337.py  POTFILES.in  add_deco.py  idlerpg.po  messages.pot  update.sh
scripts/: 38.sh  backupdb.sh  beta.sh  changelog.sh  dumpdb.sh  format.sh  setup.sh  (+1 more)
(+177 files in other folders)
