[tool.poetry]
name = "IdleRPG"
version = "0.0.1-dev"
description = "A RPG bot for Discord"
authors = ["Jens Reidel (Adrian) <adrian@travitia.xyz>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
aio_pika = "^6.6.1"
hikari = "^2.0.0-alpha.73"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake9 = "^3.8.3"
isort = "^5.4.2"
mypy = "^0.782"

[tool.flake8]
max-line-length = 88

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
line_length = 88
lines_between_types = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
